# online_shop

./: README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_product_py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_lawn_grass_py.html  z_145eef247bfb46b6_print_mixin_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_products_iterator_py.html  z_145eef247bfb46b6_smartphone_py.html  z_145eef247bfb46b6_utils_py.html
src/: base_product.py  category.py  lawn_grass.py  print_mixin.py  product.py  products_iterator.py  smartphone.py  utils.py
tests/: conftest.py  test_category.py  test_lawn_grass.py  test_print_mixin.py  test_product.py  test_products_iterator.py  test_smartphone.py  test_utils.py
